Adicionando modal para cada card

--- a/fullphp/resources/views/templates/base.html.twig
+++ b/fullphp/resources/views/templates/base.html.twig
@@ -53,6 +53,10 @@
         <meta name="twitter:image" content="{{ env.APP_URL }}/assets/imagens/logo-vertical-fundo-preto.png"/>
         {# <meta name="twitter:creator" content="@estevanmaito"/> #}
         {# <meta name="twitter:site" content="@empresa"/> #}
+
+        <style>
+            [x-cloak] { display: none !important; }
+        </style>
     {% endblock %}
 </head>
 <body>
