--- a/fullphp/resources/views/index.html.twig
+++ b/fullphp/resources/views/index.html.twig
@@ -37,4 +37,5 @@
 
 {% block scripts %}
     <script src="https://vjs.zencdn.net/8.9.0/video.min.js"></script>
+    <script src="//unpkg.com/alpinejs"></script>
 {% endblock %}
