WIP: Descrição detalhada do projeto dentro do modal

--- a/fullphp/resources/views/templates/home/trabalhos.html.twig
+++ b/fullphp/resources/views/templates/home/trabalhos.html.twig
@@ -15,7 +15,16 @@
                     {% endblock %}
 
                     {% block content %}
-                        <p>Plataforma gratuita de resolução de questões e simulados para o vestibular. <a class="underline text-blue-600" href="https://www.preparavestibular.com.br">Acesse já!</a></p>
+                        <div>
+                            <h3 class="text-2xl"><strong>Resumo</strong></h3>
+                            <p>O Projeto Prepara Vestibular é um projeto web full-stack de minha propriedade que ainda está em desenvolvimento.</p>
+                            <p>Com o objetivo de prover soluções digitais para alunos estudarem por meio de questões, simulados, pesquisarem e tirar dúvidas com professores. Além de também trazer praticidade para professorem na hora de montar suas provas, lista de exercícios e gerar uma fonte de renda extra tirando dúvidas.</p>
+                        </div>
+
+                        <div>
+                            <h3 class="text-2xl"><strong>Responsabilidades</strong></h3>
+                            <p>Como o projeto é uma iniciativa minha, fui responsável em desenvolvedor o site, modelar o sistema, projetar o banco de dados, configurar o servidor, coordenar os profissionais (contratados) de  designer e de marketing digital de acordo com os ideias do projeto.</p>
+                        </div>
                     {% endblock %}
 
                     {% block status %}<span class="text-green-600">Em produção.</span>{% endblock %}
