WIP: Escrevendo detalhes dos projetos

--- a/fullphp/resources/views/templates/home/trabalhos.html.twig
+++ b/fullphp/resources/views/templates/home/trabalhos.html.twig
@@ -15,43 +15,45 @@
                     {% endblock %}
 
                     {% block content %}
-                        <div>
+                        <div class="space-y-1">
                             <h3 class="text-2xl"><strong>Resumo</strong></h3>
                             <p>O Projeto <a class="underline text-blue-600" href="https://www.preparavestibular.com.br" target="_blank">Prepara Vestibular</a> é um projeto web full-stack de minha propriedade que ainda está em desenvolvimento.</p>
-                            <p>Com o objetivo de prover soluções digitais para alunos estudarem por meio de questões, simulados, pesquisarem matérias e tirar dúvidas com professores. Além de também trazer praticidade para professorem na hora de montar suas provas, lista de exercícios e gerar uma fonte de renda extra tirando dúvidas.</p>
+                            <p>Com o objetivo de prover soluções digitais para alunos estudarem por meio de questões, simulados, pesquisarem matérias e tirar dúvidas com professores. Além de também trazer praticidade para professores na hora de montar suas provas, lista de exercícios e gerar uma fonte de renda extra tirando dúvidas.</p>
                         </div>
 
-                        <div>
+                        <div class="space-y-1">
                             <h3 class="text-2xl"><strong>Responsabilidades</strong></h3>
-                            <p>Como o projeto é uma iniciativa minha, fui responsável em desenvolvedor o site, modelar o sistema, projetar o banco de dados, configurar o servidor, coordenar os profissionais (contratados) de  designer e de marketing digital de acordo com os ideias do projeto.</p>
+                            <p>Como o projeto é uma iniciativa minha, fui responsável pela parte de programação do site, modelar o sistema, projetar o banco de dados, configurar o servidor, coordenar os profissionais (contratados) de  designer e de marketing digital de acordo com os ideias do projeto.</p>
                         </div>
 
-                        <div>
+                        <div class="space-y-1">
                             <h3 class="text-2xl"><strong>Tecnologias</strong></h3>
                             <p>O Prepara Vestibular é construído em cima da stack TALL, sigla que significa Tailwindcss, Alpinejs, Laravel e Livewire.</p>
-                            <p>Os diagrams UML foram feitos usando draw.io, o banco de dados usado é o MariaDB e o Stripe como gateway de pagamentos.</p>
+                            <p>Os diagrams UML foram feitos usando draw.io, o banco de dados usado é o MariaDB, Github Actions para automatização do deploy e o Stripe como gateway de pagamentos.</p>
                         </div>
 
-                        <div>
+                        <div class="space-y-1">
                             <h3 class="text-2xl"><strong>Características</strong></h3>
 
                             <ul class="list-inside list-disc">
                                 <li><strong>Banco de questões</strong>: base de dados que permite realizar consultas complexas, filtrando questões por assuntos gerais, especifícos, prova, ano e dificuldade.</li>
-                                <li><strong>Simulados</strong>: Simulados fluídos e bem responsíveis.</li>
+                                <li><strong>Simulados</strong> fluídos e bem responsíveis.</li>
                                 <li><strong>Ajuda de professores</strong>: Aluno pode pedir ajuda a um professor dentro da plataforma. Sujeito a disponibilidade.</li>
+                                <li><strong>Testes, testes e mais teste</strong>: Apesar de eu não seguir a risca o TDD (Test Driven Development), para este projeto me esforcei para escrever mais de 300 testes.</li>
                             </ul>
                         </div>
 
-                        <div>
+                        <div class="space-y-1">
                             <h3 class="text-2xl"><strong>Desafios encontrados</strong></h3>
 
                             <ul class="list-inside list-decimal">
                                 <li>Dificuldade em popular a base de dados em razão da falta de uma api para consultar questões de vestibulares, sendo necessário cadastramento manual apoiado com técnicas de web scraping.</li>
                                 <li>A integração de um editor de texto para o cadastramento das questões foi bem desafiador, dado que as questões precisam possuir enunciado, metadados, e alternativas (essas que podem variar de quantidade e formato dependendo da prova).</li>
                                 <li>Montar a tela para realizar simulados foi particularmente bem trabalhosa.</li>
-                                <li>Uma novidade para mim foi desenvolver um sistema para limitar ações do usuário dependendo do plano que ele pertence (aluno, professor/gratuito, pago).</li>
+                                <li>Uma novidade para mim foi desenvolver um sistema para limitar ações do usuário dependendo cargo que pertence: visitante, aluno não assinante, professor não assinante, aluno assinante e professor assinante.</li>
                                 <li>A parte de consentimento de usuário para os cookies não foi bem intuitiva.</li>
                                 <li>Gerenciamento das telas de portais dependendo do cargo do usuário: aluno, professor, administrador...</li>
+                                <li>SEO e montar as campanhas pagas.</li>
                             </ul>
                         </div>
                     {% endblock %}
@@ -67,7 +69,50 @@
                     'title': 'Cuidado e Afeto',
                 } only %}
                     {% block summary %}
-                        <p>Plataforma de Cuidadores Pessoais no Rio de Janeiro.</p>
+                        <p>Plataforma para marcar consulta com profissionais de Enfermagem e Cuidadores Pessoais no Rio de Janeiro.</p>
+                    {% endblock %}
+
+                    {% block content %}
+                        <div class="space-y-1">
+                            <h3 class="text-2xl"><strong>Resumo</strong></h3>
+                            <p>Desenvolver um site cujo objetivo será reunir profissionais qualificados de enfermagem e cuidadores pessoais onde os clientes irão acessar o site, acessar o catálogo de profissionais e selecionar um profissional disponível para atender um paciente.</p>
+                            <p>Cada consulta conterá informação de: quem é o cliente solicitante, o paciente, quem é o profissional, a data e hora da consulta, a jornada de trabalho, o número da consulta, valor da consulta, forma de pagamento.</p>
+                        </div>
+
+                        <div class="space-y-1">
+                            <h3 class="text-2xl"><strong>Responsabilidades</strong></h3>
+                            <p>Para este projeto o cliente chegou a mim por indicação, então eu fiz entrevista, consultoria, análise de requisitos e por fim orçamento.</p>
+                            <p>Após aprovação do projeto foi dado início a modelagem do sistema e da base de dados, programação do site e configuração do servidor.</p>
+                            <p>Ao longo do projeto foram feitas reuniões de acompanhamento quinzenais com o cliente e reuniões semanais com o designer responsável do projeto.</p>
+                        </div>
+
+                        <div class="space-y-1">
+                            <h3 class="text-2xl"><strong>Tecnologias</strong></h3>
+                            <p>O Cuidado e Afeto foi desenvolvido com o NextJS + Typescript para geração das páginas estáticas, o framework bootstrap e os dados do banco de dados são consumidos no lado do cliente através de uma API feita usando Lumen, um micro-framework baseado em Laravel.</p>
+                            <p>Os diagramas UML foram feitos usando draw.io, o banco de dados usado é o MariaDB, Github Actions para automatização do deploy e o pagseguro como gateway de pagamentos.</p>
+                        </div>
+
+                        <div class="space-y-1">
+                            <h3 class="text-2xl"><strong>Características</strong></h3>
+
+                            <ul class="list-inside list-disc">
+                                <li><strong>Pesquisa por dia:</strong> Página intuítiva para pesquisar profissionais disponíveis por data.</li>
+                                <li><strong>Profissionais verificados:</strong> Apenas profissionais verificados terão o cadastro aceito, aumentando segurança do cliente.</li>
+                                <li>Entre em contato diretamente com o profissional após confirmação do pagamento.</li>
+                                <li>Integração do sistema de pagamento por meio do gateway de pagamentos, principalmente a parte do PIX.</li>
+                            </ul>
+                        </div>
+
+                        <div class="space-y-1">
+                            <h3 class="text-2xl"><strong>Desafios encontrados</strong></h3>
+
+                            <ul class="list-inside list-decimal">
+                                <li>Muito aprendizado em relação a gerenciamento de projeto e do cliente.</li>
+                                <li>Como único do desenvolvedor do projeto, foi muito trabalhoso gerenciar repositórios diferentes com tecnologias tão distintas, um sistema que roda no lado do cliente em React e um backend em php.</li>
+                                <li>O dashboard de gerenciamento do administrador tomou muito mais tempo de execução do que o previsto, principalmente para implantação dos token JWT para autenticação.</li>
+                                <li>O componente para selecionar a data nas telas de exibir os profissionais disponíveis e dentro do perfil do profissional (onde mostra os horários disponíveis do profissional), foi surpreendemente mais difícil que imaginado.</li>
+                            </ul>
+                        </div>
                     {% endblock %}
 
                     {% block status %} <span class="text-green-600">Entregue.</span>{% endblock %}
