--- a/fullphp/resources/views/index.html.twig
+++ b/fullphp/resources/views/index.html.twig
@@ -2,40 +2,10 @@
 
 {% block title %}Desenvolvedor de Software Diego Matos{% endblock %}
 {% block description %}Página principal do desenvolvedor Diego Matos, conheça um pouco sobre ele, entre em contato, baixe seu curriculum ou olhe o código desse site em sua página do GitHub.{% endblock %}
-{% block head %}
-    {{ parent() }}
-
-    <style>
-        @font-face {
-            font-family: DINPro;
-            src: url("/assets/font/FontsFree-Net-DINPro-1.ttf") format('truetype');
-        }
-
-        @font-face {
-            font-family: Speeday;
-            src: url("/assets/font/Speeday-Regular-FFP.ttf") format('truetype');
-        }
-
-        body {
-            font-family: DINPro;
-        }
-    </style>
-
-    <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
-    <link href="https://vjs.zencdn.net/8.9.0/video-js.css" rel="stylesheet" />
-{% endblock %}
 
 {% block content %}
-    {{ include('/templates/home/apresentacao.html.twig') }}
-    {{ include('/templates/home/trabalhos.html.twig') }}
-    {{ include('/templates/home/contato.html.twig') }}
+    {{ include('/templates/apresentacao.html.twig') }}
+    {{ include('/templates/trabalhos.html.twig') }}
+    {{ include('/templates/contato.html.twig') }}
 {% endblock %}
 
-{% block footer %}
-    {{ include('/templates/home/footer.html.twig') }}
-{% endblock %}
-
-{% block scripts %}
-    <script src="https://vjs.zencdn.net/8.9.0/video.min.js"></script>
-    <script src="//unpkg.com/alpinejs"></script>
-{% endblock %}
