--- a/fullphp/resources/views/templates/base.html.twig
+++ b/fullphp/resources/views/templates/base.html.twig
@@ -56,13 +56,36 @@
 
         <style>
             [x-cloak] { display: none !important; }
+
+            @font-face {
+                font-family: DINPro;
+                src: url("/assets/font/FontsFree-Net-DINPro-1.ttf") format('truetype');
+            }
+
+            @font-face {
+                font-family: Speeday;
+                src: url("/assets/font/Speeday-Regular-FFP.ttf") format('truetype');
+            }
+
+            body {
+                font-family: DINPro;
+            }
         </style>
+
+        <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+        <link href="https://vjs.zencdn.net/8.9.0/video-js.css" rel="stylesheet" />
     {% endblock %}
 </head>
 <body>
-    <main id="main">{% block content %}{% endblock %}</main>
-    <footer id="footer">{% block footer %}{% endblock %}</footer>
+    <main id="main">
+        {% block content %}{% endblock %}
+    </main>
+    <footer id="footer">
+        {{ include('/templates/footer.html.twig') }}
+    </footer>
 
+    <script src="https://vjs.zencdn.net/8.9.0/video.min.js"></script>
+    <script src="//unpkg.com/alpinejs"></script>
     {% block scripts %}{% endblock %}
 </body>
 </html>
