--- a/fullphp/resources/views/templates/components/trabalhos-menu.html.twig
+++ b/fullphp/resources/views/templates/components/trabalhos-menu.html.twig
@@ -5,5 +5,5 @@
     >
         Trabalhos
     </a>
-    <a href="/?q=projetos" class="{% if q == 'projetos' %}bg-gray-600 text-white{% endif %} md:w-full text-center px-4 py-2">Projetos</a>
+    <a href="/?q=prototipos" class="{% if q == 'prototipos' %}bg-gray-600 text-white{% endif %} md:w-full text-center px-4 py-2">Protótipos</a>
 </div>
