--- a/fullphp/resources/views/templates/trabalhos.html.twig
+++ b/fullphp/resources/views/templates/trabalhos.html.twig
@@ -12,8 +12,8 @@
             <div class="col-span-5">
                 {% if q is empty %}
                     {{ include('/templates/home/trabalhos.html.twig') }}
-                {% elseif q == 'projetos' %}
-                    {{ include('/templates/home/projetos.html.twig') }}
+                {% elseif q == 'prototipos' %}
+                    {{ include('/templates/home/prototipos.html.twig') }}
                 {% endif %}
             </div>
         </div>
