Fix: Erro de digitação

--- a/fullphp/resources/views/templates/home/prototipos.html.twig
+++ b/fullphp/resources/views/templates/home/prototipos.html.twig
@@ -7,7 +7,7 @@
             {% block summary %}
                 <p>Projeto final da disciplina Algebra Linear Algoritma do curso de Ciência da Computação.</p>
                 <p>Projeto consiste em transformar uma imagem que está "torta" e corrigir sua perspectiva através de coordenadas homogênias e funções afim.</p>
-                <p>Jogo foi desenvolvido com Python3.</p>
+                <p>Trabalho foi desenvolvido com Python3.</p>
             {% endblock %}
         {% endembed %}
     </li>
