Fix: Meta tag obrigatorio para mobile

--- a/fullphp/resources/views/templates/base.html.twig
+++ b/fullphp/resources/views/templates/base.html.twig
@@ -9,6 +9,7 @@
         <meta name="author" content="Diego Matos"/>
         <meta name="robots" content="index,follow"/>
         <meta name="rating" content="General"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
         <link rel="apple-touch-icon" sizes="57x57" href="{{ env.APP_URL }}/favicon/apple-icon-57x57.png"/>
         <link rel="apple-touch-icon" sizes="60x60" href="{{ env.APP_URL }}/favicon/apple-icon-60x60.png"/>
