--- a/resources/views/templates/home/trabalhos.html.twig
+++ b/resources/views/templates/home/trabalhos.html.twig
@@ -121,14 +121,13 @@
             'thumbnail': 'minijogos-educativos.jpg'
         } only %}
             {% block summary %}
-                <p>Coletânea de minijogos educativos encomendados por uma escola.</p>
+                <p>Coletânea de minijogos educativos encomendados por uma escola. A temática dos jogos foi construída através da ajuda dos professores, <a class="underline text-blue-600" target="_blank" href="https://diegomatos321.github.io/escola-mozilla-verso/">jogue agora!</a></p>
             {% endblock %}
 
             {% block content %}
                 <div class="space-y-1">
                     <h3 class="text-2xl"><strong>Resumo</strong></h3>
-                    <p>Este projeto é composto por 16 jogos para o navegador com público alvo para crianças e foi encomendado por uma escola em São Paulo. A temática dos jogos foi construída através da ajuda dos professores, <a class="underline text-blue-600" target="_blank" href="https://diegomatos321.github.io/escola-mozilla-verso/">jogue agora!</a></p>
-                    <p>O trabalho chegou a mim por indicação em um dos canais internos da <a class="underline text-blue-600" href="https://gdpufrj.itch.io/" target="_blank">GDP</a>.</p>
+                    <p>Este projeto é composto por 16 jogos para o navegador com público alvo para crianças e foi encomendado por uma escola em São Paulo. O trabalho chegou a mim por indicação em um dos canais internos da <a class="underline text-blue-600" href="https://gdpufrj.itch.io/" target="_blank">GDP</a>.</p>
                 </div>
 
                 <div class="space-y-1">
