--- a/resources/views/templates/home/prototipos.html.twig
+++ b/resources/views/templates/home/prototipos.html.twig
@@ -1,6 +1,19 @@
 <ul class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-4">
     <li>
         {% embed '/templates/components/trabalho-card.html.twig' with {
+            'videoSrc': 'demonstracao-lia.mp4',
+            'title': 'Lia na Floresta Mágica',
+        } only %}
+            {% block summary %}
+                <p>A mãe de Lia pegou a doença do Slime e agora ela precisa encontrar o remédio para sua mãe. Ajude Lia a se aventurar através de floresta mágica para se encontrar com seu tio e ajudar sua mãe.</p>
+                <p>Este jogo foi desenvolvido como parte do processo seletivo <a target="_blank" href="https://www.youtube.com/playlist?list=PLnNxNQmWoZVxRj74gNexY_GN9OClQ9dd8" class="underline text-blue-600">LAJE 2021</a> para o grupo de extensão <a target="_blank" href="https://gdpufrj.itch.io/" class="underline text-blue-600">GDP UFRJ</a> dentro de um prazo de 2 semanas usando Godot 3.</p>
+                <p>O jogo encontra-se disponível gratuitamento <a target="_blank" href="https://gdpufrj.itch.io/laje-4" class="underline text-blue-600">aqui</a>. Veja também o <a target="_blank" href="https://github.com/Espetinho-de-Legumes/Lia-na-Floresta-Magica" class="underline text-blue-600">código fonte</a>.</p>
+            {% endblock %}
+        {% endembed %}
+    </li>
+
+    <li>
+        {% embed '/templates/components/trabalho-card.html.twig' with {
             'videoSrc': 'projeto-ala-warp-perspective-2.mp4',
             'title': 'Retificação de Perspectiva - Warp Perspective',
         } only %}
