Fix: Layout da página

--- a/resources/views/templates/components/trabalhos-menu.html.twig
+++ b/resources/views/templates/components/trabalhos-menu.html.twig
@@ -1,9 +1,9 @@
 <div class="flex flex-wrap justify-between md:justify-normal gap-4">
     <a
-        href="/"
-        class="{% if q is empty %}bg-gray-600 text-white {% endif %}md:w-full text-center px-4 py-2"
+            href="/"
+            class="{% if q is empty %}bg-gray-600 text-white {% endif %}md:w-full text-center px-4 py-2 shadow hover:bg-gray-400 hover:text-white transition-colors"
     >
         Trabalhos
     </a>
-    <a href="/?q=prototipos" class="{% if q == 'prototipos' %}bg-gray-600 text-white{% endif %} md:w-full text-center px-4 py-2">Protótipos</a>
+    <a href="/?q=prototipos" class="{% if q == 'prototipos' %}bg-gray-600 text-white {% endif %}md:w-full text-center px-4 py-2 shadow hover:bg-gray-400 hover:text-white transition-colors">Protótipos</a>
 </div>
