--- a/resources/views/templates/base.html.twig
+++ b/resources/views/templates/base.html.twig
@@ -73,6 +73,18 @@
             }
         </style>
 
+        {% if not env.APP_DEBUG %}
+            <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id={{ env.GA_ID }}"></script>
+            <script>
+                window.dataLayer = window.dataLayer || [];
+                function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+
+                gtag('config', '{{ env.GA_ID }}');
+            </script>
+        {% endif %}
+
         <script src="https://cdn.tailwindcss.com?plugins=forms" defer></script>
         <link href="https://vjs.zencdn.net/8.9.0/video-js.css" rel="stylesheet" />
     {% endblock %}
