--- a/resources/views/mails/contato-message.html.twig
+++ b/resources/views/mails/contato-message.html.twig
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1><strong>Olá Diego,</strong></h1>
-    <p>Me chamo <strong>{{ nome }}</strong> e desejo falar com você sobre:</p>
-    <p>{{ message }}</p>
+    <p>Me chamo <strong>{{ nome|escape }}</strong> e desejo falar com você sobre:</p>
+    <p>{{ message|escape }}</p>
 </body>
 </html>
