--- a/resources/views/templates/home/trabalhos.html.twig
+++ b/resources/views/templates/home/trabalhos.html.twig
@@ -57,6 +57,47 @@
         {% endembed %}
     </li>
 
+        <li>
+        {% embed '/templates/components/trabalho-card.html.twig' with {
+            'videoSrc': 'demonstracao-promec.mp4',
+            'title': 'PROMEC',
+        } only %}
+            {% block summary %}
+                <p>Realizei período de estágio onde fui responsável pela programação de alguns projeto sobre a supervisão de <a href="https://www.linkedin.com/in/gazoni/" target="_blank" class="underline text-blue-600">Leandro Gazoni</a>:</p>
+            {% endblock %}
+
+            {% block content %}
+                <div class="space-y-1">
+                    <h3 class="text-2xl"><strong>Resumo</strong></h3>
+                    <p>A PROMEC - Applied Modeling and Data Science, é uma empresa localizada no Parque Tecnologico da UFRJ, dentro do laboratório LAMCE onde também atua como Grupo de Mecanica Computacional. Durante meus 10 meses como estagiário trabalhei com projetos web com propósitos científicos.</p>
+                </div>
+
+                <div class="space-y-1">
+                    <h3 class="text-2xl"><strong>Responsabilidades</strong></h3>
+                    <ul class="list-inside list-disc">
+                        <li>Desenvolvimento de aplicações em linguagens como: C++, Python, HTML/CSS e JavaScript;</li>
+                        <li>Utilização de frameworks de backend e frontend;</li>
+                        <li>Criação de Interfaces GUI avançadas, integrando tecnologias como Angular, Vue.js, e React para uma experiência visual aprimorada; construção de app desktop com Qt.</li>
+                        <li>Análise de Desempenho e Perfilagem de códigos front-end e back-end, otimizando a eficiência das aplicações desenvolvidas</li>
+                        <li>Desenvolvimento de aplicações para engenharia e ciência de dados, incorporando elementos de computação gráfica e visualização científica para uma experiência mais interativa e informativa.</li>
+                    </ul>
+                </div>
+
+                <div class="space-y-1">
+                    <h3 class="text-2xl"><strong>Projetos realizados</strong></h3>
+                        <ul class="list-inside list-disc">
+                        <li>Ferramenta para visualização de dados geoespaciais usando Geotoolkit, Angular e Nodejs.</li>
+                        <li>Um dashboard para configuração de parâmetros de um modelo de Aprendizado de Máquina para pedição de uma planta de óleo e gás com um visualizador simplificado da planta usando Vuejs e Python3.</li>
+                        <li>Plot de gráfico de predição em tempo real usando sockets com plotly.js e python.</li>
+                        <li>Breve contato com computação gráfica 3D na web usando Paraview e Python.</li>
+                    </ul>
+                    <p><strong>Obs:</strong> Nem todos os projetos possuem vídeo.</p>
+            {% endblock %}
+
+            {% block tempo %}Nov/2023 - Ago/2024{% endblock %}
+        {% endembed %}
+    </li>
+
     <li>
         {% embed '/templates/components/trabalho-card.html.twig' with {
             'videoSrc': 'demonstracao-cuidado-e-afeto.mp4',
